--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   just_audio: ^0.9.36
   # To Play song in Background
   just_audio_background: ^0.0.1-beta.11
+  # State Management
+  flutter_bloc: ^8.1.3
 
 dev_dependencies:
   flutter_test:
