--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,10 +47,24 @@ dependencies:
   flutter_bloc: ^8.1.3
   # To Loading Animation
   shimmer: ^3.0.0
+  # To Store Favourite 
+  shared_preferences: ^2.2.2
+  # To Display Toast
+  fluttertoast: ^8.2.4
+
 
 dev_dependencies:
+  # To Change the Launcher Icons
+  flutter_launcher_icons: ^0.13.1
   flutter_test:
     sdk: flutter
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/logo.png"
+  #min_sdk_android: 21 #
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
